syntax = "proto3";

package sum;
option go_package = "./sumpb";

message SumRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeRequest {
    int32 number = 1;
}

message PrimeResponse {
    int32 number = 1;
}

service SumService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc Prime(PrimeRequest) returns (stream PrimeResponse) {};
}